code25_all/scala/14963427.txt
class Thermometer{

  var celsius: Float = _

  def fahrenheit = celsius * 9/5 + 32
  def fahrenheit_ = (f: Float) {
    celsius = (f-32)*5/9
  }

  override def toString = fahrenheit + "F/"+ celsius + "C"
}

Programming in Scala 2nd edition
scalac Thermometer.scala 
Thermometer.scala:6: error: not found: value f
  def fahrenheit_ = (f: Float) {
                     ^

